# evmc-precompiles

./: Cargo.toml  README.md
crates/capi/: Cargo.toml  build.rs
crates/capi/include/: precompiles.h
crates/capi/src/: lib.rs
crates/precompiles/: Cargo.toml
crates/precompiles/src/: ecadd.rs  ecpairing.rs  keccak.rs  lib.rs
