[package]
name = "evmc-precompiles-capi"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ipsilon/evmc-precompiles"
description = "Ethereum Keccak-256 precompile in Rust"
edition = "2021"

[build-dependencies]
bindgen = "0.59"

[dependencies]
evmc-precompiles = { path = "../precompiles", version = "0.1.0" }
ripemd = "0.1.1"

[lib]
crate-type=["staticlib"]
