[package]
name = "evmc-precompiles"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ipsilon/evmc-precompiles"
description = "Ethereum Keccak-256 precompile in Rust"
edition = "2021"

[dependencies]
tiny-keccak = "1.4"
ethereum-bn128 = { git = "https://github.com/ewasm/ethereum-bn128.rs", tag = "0.1.1" }
